lbdb (0.49) UNRELEASED; urgency=medium

  * Backup testuite output into artifacts.
  * Add buildlog to gitlab-ci test pipeline.
  * d/gitlab-ci.yml stripped down using pipline-jobs.yml
  * lbdbq: re-add $exec_prefix, which may be used in libdir.
  * Strip suffixes starting with "+" from elpa version.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Mar 2019 16:04:05 +0100

lbdb (0.48.1) unstable; urgency=medium

  * Fix wrong quoting in lbdb-fetchaddr (Closes: #918594).

 -- Roland Rosenfeld <roland@debian.org>  Mon, 07 Jan 2019 19:30:29 +0100

lbdb (0.48) unstable; urgency=medium

  * m_muttalias: Fix some shellcheck warnings.
  * Change project homepage URL to https.
  * Use literal tab characters in order to make m_abook and m_goobook
    modules work without requiring GNU sed(1).  Thanks to Raf Czlonka.
  * Add tests for m_abook.
  * Add update-version target to update version in all autotool files.
  * m_abook: Fix a shellcheck warning.
  * lbdbq, lbdb-fetchaddr: Fix some shellcheck warnings.
  * Upgrade Standards-Version to 4.3.0
    - Declare Rules-Requires-Root: no.
  * Upgrade debhelper to v12.
  * m_inmail/lbdb-munge: Use INMAIL_DB if set in config (Closes: #916282).
  * Add salsa CI pipeline in debian/gitlab-ci.yml.

 -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Jan 2019 16:59:04 +0100

lbdb (0.47) unstable; urgency=medium

  * Add .gitignore based on code by Lucas Hoffmann.
  * Upgrade debhelper to v11.
  * Replace legacy `...` by $(...) in sh scripts.
  * Update copyright notice.
  * Add test_perl to check perl syntax.
  * Add some perl libs <!nocheck> to Build-Depends, to be able do
    perl syntax check.
  * Replace undefined $rv by $?.
  * Make the database file for m_inmail/lbdb-fetchaddr configurable.
  * Add LBDB_OVERRIDE_METHODS, OVERIDE_MUTTALIAS_FILES variables for
    testing.
  * Add a test suite.
    - Add a test for m_muttalias.
  * m_muttalias: rewrite sed regex as ERE, which should be more POSIX