@@ -2,7 +2,7 @@
 #
 # -*-sh-*-
 #
-#     Copyright (C) 1999-2018  Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 1999-2020  Roland Rosenfeld <roland@spinnaker.de>
 #     Copyright (C) 2007       Yaroslav Halchenko <debian@onerussian.com>
 # 
 #     This program is free software; you can redistribute it and/or modify
@@ -26,7 +26,7 @@ umask 077
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 dotlock=@DOTLOCK@
-db=$INMAIL_DB
+db=$M_INMAIL_DB
 munge=@libdir@/munge
 
 if [ ! -f $db.dirty ]
