@@ -1,7 +1,7 @@
 #! @SH@
 #
 #     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                   1999-2018  Roland Rosenfeld <roland@spinnaker.de>
+#                   1999-2020  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -21,12 +21,12 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 
-m_inmail_db=${INMAIL_DB:-$HOME/.lbdb/m_inmail.utf-8}
+M_INMAIL_DB=${INMAIL_DB:-$HOME/.lbdb/m_inmail.utf-8}
 
 m_inmail_query()
 {
-	export SORT_OUTPUT MUNGE_LIMITDATE MUNGE_LIMITCOUNT INMAIL_DB
+	export SORT_OUTPUT MUNGE_LIMITDATE MUNGE_LIMITCOUNT M_INMAIL_DB
 	$libdir/lbdb-munge
-	test -f $m_inmail_db  || return
-	grep -ia "$@." $m_inmail_db || :
+	test -f $M_INMAIL_DB  || return
+	grep -ia "$@." $M_INMAIL_DB || :
 }
