@@ -5,6 +5,7 @@ lbdb (0.49) UNRELEASED; urgency=medium
   * d/gitlab-ci.yml stripped down using pipline-jobs.yml
   * lbdbq: re-add $exec_prefix, which may be used in libdir.
   * Strip suffixes starting with "+" from elpa version.
+  * Forward INMAIL_DB default from m_inmail to lbdb-munge.
 
  -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Mar 2019 16:04:05 +0100
 
